--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/links-files/_links-files.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/00-paragraphs/links-files/_links-files.scss
@@ -10,8 +10,10 @@
 	//set margins for links and files lists
 	.links-files{
 		margin-top: 2rem;
-		@include smallTab{
-			@include cssColumns(2,4rem,nobreak);
+		&.multi-col{
+			@include smallTab{
+				@include cssColumns(2,4rem,nobreak);
+			}
 		}
 		& > div{
 			margin-bottom: .5rem;
