Theme all the webform elements

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -103,7 +103,26 @@ $checkboxCheckedBack      : $link;
 $checkboxCheckedBackHover : $midGrey;
 $selectArrow              : $midGrey;
 $selectHighlight          : $link;
-
+$progressBar              : $grey;
+$progressMarker           : $grey;
+$progressMarkerText       : $black;
+$progressMarkerActive     : $darkGrey;
+$progressMarkerActiveText : $white;
+$sliderTrack              : $grey;
+$sliderTrackHover         : $link;
+$sliderKnob               : $white;
+$datepickerHeader         : $red;
+$datepickerHeaderElement  : $white;
+$datepickerDays           : $black;
+$datepickerDaysBack       : $lightGrey;
+$datepickerDate           : $darkGrey;
+$datepickerDateBack       : $white;
+$datepickerDateBorder     : $lightGrey;
+$datepickerCurrent        : $darkGrey;
+$datepickerCurrentBack    : $whiteGold;
+$datepickerSelected       : $black;
+$datepickerSelectedBack   : $darkIce;
+$detailsWrapperBack       : $offWhite;
 
 /* TABLES
 ---------------- */
