--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/02-buttons/_buttons.scss
@@ -84,6 +84,9 @@ $submitPadding: 0 1.5rem;
 			margin-left: 1.5rem;
 		}
 	}//end wysiwyg
+	&.js-hide{
+		display: none;
+	}
 }//end button mixin
 
 ///mixin - outlineButton
