--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/04-tables/_tables.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/04-tables/_tables.scss
@@ -73,7 +73,7 @@
 
 /* TABLE STYLING
 -------------------- */
-.text-with-summary,.text-long,.view-content{
+.text-with-summary,.text-long,.view-content,.webform-submission-form{
 	table{
 		@include table;
 		margin-bottom: $spaceMd;
