--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
@@ -68,10 +68,10 @@ body {
 		li.menu-item--expanded{
 			ul{
 				li.menu-item--expanded{
-					background-image: url('../images/admin/caret-right-blue.svg');
+					background-image: url('../images/form-elements/caret-right-blue.svg');
 					background-size: 16px 16px;
 					&:hover{
-						background-image: url('../images/admin/caret-right-blue-dark.svg');
+						background-image: url('../images/form-elements/caret-right-blue-dark.svg');
 					}
 				}
 			}
@@ -117,7 +117,6 @@ body {
 /* KINTING
 -------------- */
 .kint{
-	position: fixed;
 	z-index: 9999;
 	top: 200px;
 	right: 5%;
@@ -508,7 +507,7 @@ body {
 	}
 }
 
-/* NON-LAYOUT-BUILDER SIDEBAR PANELS AND OFF CANVAS
+/* NON-LAYOUT-BUILDER SIDEBAR PANELs, OFF CANVAS, UI- ELEMENTS
 -------------------------------------------- */
 
 /* MODERATION SIDEBAR */
@@ -587,3 +586,107 @@ body {
 		@include cautionButton;
 	}
 }//end off canvas
+
+/* TOOLTIPS
+------------------ */
+.ui-tooltip{
+	font-size: 1.5rem;
+	border: 1px solid $borderRule;
+	padding: 1rem 2rem;
+	background: $offWhite;
+	box-shadow: 2px 2px 3px rgba(35,35,35,0.2);
+}
+
+/* DATEPICKER
+------------------- */
+.ui-datepicker{
+	padding: 0;
+	&.ui-widget-content{
+		border: $elementBorder;
+		border-radius: 0;
+	}
+	.ui-datepicker-header{
+		background: $datepickerHeader;
+		color: $datepickerHeaderElement;
+		border: 0;
+		border-radius: 0;
+		select{
+			@include browserWipe;
+			color: $white;
+			border: 0;
+			background-image: url('../images/form-elements/arrow-down-white.svg');
+			background-repeat: no-repeat;
+			background-size: 12px;
+			background-position: 50px center;
+		}
+		a{
+			&.ui-state-hover{
+				border-color: transparent;
+				background: rgba(255,255,255,0.2);
+			}
+			&.ui-datepicker-next{
+				.ui-icon{
+					background: url('../images/form-elements/caret-right-white.svg');
+					background-repeat: no-repeat;
+					background-size: 8px;
+					background-position: center;
+				}
+			}
+			&.ui-datepicker-prev{
+				.ui-icon{
+					background: url('../images/form-elements/caret-right-white.svg');
+					background-repeat: no-repeat;
+					background-size: 8px;
+					background-position: center;
+					@include rotate(180);
+				}
+			}
+		}//end a
+	}//end ui-datepicker-header
+	.ui-datepicker-calendar{
+		thead{
+			background: $datepickerDaysBack;
+			color: $datepickerDays;
+		}
+		td{
+			.ui-state-default{
+				border-color: $datepickerDateBorder;
+				background: $datepickerDateBack;
+				color: $datepickerDate;
+				&:hover,&:focus{
+					background: $buttonBackHover;
+					color: $buttonTextHover;
+				}
+				&:active{
+					background: $buttonBackActive;
+					color: $buttonTextActive;
+				}
+				&.ui-state-highlight{
+					background: $datepickerCurrentBack;
+					color: $datepickerCurrent;
+					&:hover,&:focus{
+						background: $buttonBackHover;
+						color: $buttonTextHover;
+					}
+					&:active{
+						background: $buttonBackActive;
+						color: $buttonTextActive;
+					}
+				}//end highlight
+				&.ui-state-active{
+					background: $datepickerSelectedBack;
+					color: $datepickerSelected;
+					&:hover,&:focus{
+						background: $buttonBackHover;
+						color: $buttonTextHover;
+					}
+					&:active{
+						background: $buttonBackActive;
+						color: $buttonTextActive;
+					}
+				}
+			}//end ui-state-default
+		}//end td
+	}//end calendar
+}//end ui-datepicker
+
