--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_01-textfields.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_01-textfields.scss
@@ -23,10 +23,16 @@
 		max-width: 150px;
 	}
 }
-.js-form-type-tel.form-tel{
+.js-form-type-tel{
 	input{
 		@include textInput;
 		max-width: 250px;
+	}
+}
+.js-form-type-url{
+	input{
+		@include textInput;
+		max-width: 350px;
 	}
 }
 .js-form-type-textarea{
@@ -35,3 +41,10 @@
 		line-height: 1.4;
 	}
 }
+.form-item-date-time-daypicker-time{
+	input{
+		@include textInput;
+		max-width: 130px;
+	}
+}
+
