--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_02-select.scss
@@ -5,7 +5,7 @@
 @mixin inputSelect{
 	width: 100%;
 	font-size: 1.6rem;
-	border: 2px solid $formElementBorder;
+	border: $elementBorder;
 	border-radius: 0;
 	height: auto;
 	background: $siteBack;
@@ -71,10 +71,16 @@ body,#drupal-off-canvas{
 				background: $siteBack;
 			}
 			.select2-selection__arrow{
-				@include triangle(down,12px,16px,$selectArrow);
-				top: 17px;
+				background-image: url('../images/form-elements/caret-down-dkgrey.svg');
+				background-repeat: no-repeat;
+				background-size: 16px;
+				background-position: center;
+				top: 9px;
 				right: 10px;
-				background: none;
+				-webkit-transition: -webkit-transform 0.15s ease-in 0s;
+				transition: -webkit-transform 0.15s ease-in 0s;
+				transition: transform 0.15s ease-in 0s;
+				transition: transform 0.15s ease-in 0s, -webkit-transform 0.15s ease-in 0s;
 				//hide default select2 arrow
 				b{
 					display: none;
@@ -109,12 +115,19 @@ body,#drupal-off-canvas{
 				&:after{
 					content: '';
 					display: block;
-					height: 100%;
+					height: 20px;
+					width: 20px;
 					position: absolute;
-					top: 10px;
-					right: 2px;
-					cursor: pointer;
-					@include triangle(down,12px,16px,$selectArrow);
+					background-image: url('../images/form-elements/caret-down-dkgrey.svg');
+					background-repeat: no-repeat;
+					background-size: 16px;
+					background-position: center;
+					top: 9px;
+					right: 5px;
+					-webkit-transition: -webkit-transform 0.15s ease-in 0s;
+					transition: -webkit-transform 0.15s ease-in 0s;
+					transition: transform 0.15s ease-in 0s;
+					transition: transform 0.15s ease-in 0s, -webkit-transform 0.15s ease-in 0s;
 				}
 				input.select2-search__field{
 					color: $darkGrey;
@@ -138,8 +151,9 @@ body,#drupal-off-canvas{
 			//single
 			.select2-selection--single{
 				.select2-selection__arrow{
-					border-top: 0;
-					border-bottom: 12px solid $selectArrow;
+					-webkit-transform: rotate(180deg);
+					-ms-transform: rotate(180deg);
+					transform: rotate(180deg);
 				}
 			}//end single
 
@@ -148,8 +162,9 @@ body,#drupal-off-canvas{
 				border-width: 2px;	
 				.select2-search--inline{ 
 					&:after{
-						border-top: 0;
-						border-bottom: 12px solid $selectArrow;
+						-webkit-transform: rotate(180deg);
+						-ms-transform: rotate(180deg);
+						transform: rotate(180deg);
 					}
 					input.select2-search__field{
 						@include placeholder;
@@ -170,7 +185,7 @@ body,#drupal-off-canvas{
 ---------------- */
 .select2-container{
 	.select2-dropdown{
-		border: 2px solid $formElementBorderFocus;
+		border: $formElementBorderWidth solid $formElementBorderFocus;
 		border-radius: 0;
 		border-top: 0;
 		padding: 0;
