--- a/web/themes/crane/scss/entities/_webforms.scss
+++ b/web/themes/crane/scss/entities/_webforms.scss
@@ -20,6 +20,26 @@
 	}
 }//end webform-filter-form
 
+
+/* WEBFORM ADD ELEMENT POPUP
+--------------------------- */
+.webform-ui-element-type-select-form{
+	//hide details blocks that will never be used
+	details{
+		&[data-webform-element-id="webform-ui-element-type-6"],&[data-webform-element-id="webform-ui-element-type-10"],&[data-webform-element-id="webform-ui-element-type-11"],&[data-webform-element-id="webform-ui-element-type-12"]{
+			display: none !important;
+		}
+	}
+	//hide obscure elements from type tables
+	.webform-ui-element-type-table{
+		tr{
+			&[data-drupal-selector="edit-elements-hidden"],&[data-drupal-selector="edit-elements-webform-autocomplete"],&[data-drupal-selector="edit-elements-captcha"],&[data-drupal-selector="edit-elements-webform-codemirror"],&[data-drupal-selector="edit-elements-color"],&[data-drupal-selector="edit-elements-webform-mapping"],&[data-drupal-selector="edit-elements-webform-same"],&[data-drupal-selector="edit-elements-search"],&[data-drupal-selector="edit-elements-webform-toggle"],&[data-drupal-selector="edit-elements-value"],&[data-drupal-selector="edit-elements-webform-custom-composite"],&[data-drupal-selector="edit-elements-webform-link"],&[data-drupal-selector="edit-elements-webform-location-places"],&[data-drupal-selector="edit-elements-processed-text"],&[data-drupal-selector="edit-elements-webform-likert"],&[data-drupal-selector="edit-elements-webform-toggles"]{
+				display: none !important;
+			}
+		}
+	}
+}//end webform select form
+
 /* FORM ELEMENT POPUP 
 ------------------------- */
 .webform-ui-element-form{
@@ -74,6 +94,19 @@
 			outline: none;
 			background: $hoverLink;
 		}
+	}
+	//fix alignment of adding more options
+	.container-inline{
+		div{
+			vertical-align: bottom;
+		}
+		input[data-drupal-selector="edit-properties-options-custom-options-add-submit"]{
+			margin-bottom: 3.2rem;
+		}
+	}
+	//hide some styling options that could conflict with the theme
+	.form-item-properties-icheck,.form-item-properties-select2,.form-item-properties-choices,div[data-drupal-selector="edit-select-message"].webform-message{
+		display: none;
 	}
 }//end form element popup
 
