--- a/web/themes/crane/scss/elements/_buttons.scss
+++ b/web/themes/crane/scss/elements/_buttons.scss
@@ -264,6 +264,7 @@ button{
 			background: $buttonBack;
 			color: $buttonText;
 			font-weight: $heavy;
+			margin-bottom: $spaceXxs;
 			&:hover,&:focus{
 				border-color: $buttonBackHover;
 				background: $buttonBackHover;
