--- a/web/themes/crane/scss/entities/_views.scss
+++ b/web/themes/crane/scss/entities/_views.scss
@@ -378,6 +378,16 @@
 	}
 	.views-field-bundle{
 		@extend .views-field-name;
-		padding-top: 0;
+		position: relative;
+		&:before{
+			content: '';
+			display: block;
+			position: absolute;
+			left: 30%;
+			top: 0;
+			width: 40%;
+			height: 1px;
+			background: $white;
+		}
 	}
 }//end eb-media
