--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -3,7 +3,7 @@
 
 /* ADMINS - do not customize per site */
 $gold          : #fcd105;
-$whiteGold     : #fbf9db;
+$whiteGold     : #fefbc7;
 $fuchsia       : #c028bb;
 $purple        : #8b01e2;
 $green         : #018901;
