--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -17,7 +17,7 @@ $fuchsia      : #c41294;
 $purple       : #8b01e2;
 $green        : #018901;
 $gold         : #fcdc01;
-$whiteGold    : #fbf9db;
+$whiteGold    : #fefbc7;
 $blueGrey     : #dce7f3;
 $blue         : #026cc5;
 $midBlue      : #1d5a9f;
